# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  EditorBindings.cpp  EditorBindings.h  MainGame.cpp
networking-stuff/: UDP.cpp  UDPClient.cpp  UDPServer.cpp  hi.cpp
resources/fonts/: *.fnt  code.fnt  dejavu.fnt  intellij.fnt
resources/ideas/: awareness  dialogue  feels  personality  story  stress
resources/maps/: default.xml  map1.map  map1.transforms
resources/models/: computer.blend  computer.blend1  computer.mtl  emptyroom.mtl  emptyroom2.mtl  room1.blend  room1.blend1  room1.dae
resources/shaders/: blur.frag  console.frag  default.frag  default.frag.tmp  default.vert  glitch.frag  glitch.vert  identity.frag  identity.vert  simple2d.frag  simple2d.vert  solid.frag  solid.vert  solidColor.frag  solidColor.vert
src/core/: Game.h  GameRegistry.cpp  GameRegistry.h  Logging.cpp  Logging.h  ResourceDirectory.cpp  ResourceDirectory.h  SharedState.h
src/game/: Astar.cpp  Astar.h  Font.cpp  Font.h  Game.cpp  GameMap.cpp  GameMap.h  GameState.h  GlRaii.h  Graphics.cpp  Graphics.h  Grid.cpp  Grid.h  GridAstar.cpp  GridAstar.h  Math.cpp  Math.h  Mesh.h  NavMesh.cpp  NavMesh.h  ObjReader.cpp  ObjReader.h  PathGrid.cpp  PathGrid.h  Physics.cpp  Physics.h  Pool.h  Rect.h  ShaderProgram.cpp  ShaderProgram.h  Shadows.cpp  Shadows.h  Test.h  Texture.cpp  Texture.h  Tycoon.cpp  Tycoon.h  Utility.cpp  Utility.h  Vertex.h
src/launcher/: App.h  CommandLineParser.cpp  CommandLineParser.h  DesktopApp.cpp  DesktopApp.h  FileMonitor.cpp  FileMonitor.h  GlfwWindow.cpp  GlfwWindow.h  Main.cpp
src/stateHook/: StateHook.cpp
